<resources>
    <string name="app_name">CareSentinel</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="prompt_client_number">Client Number</string>
    <string name="prompt_site_id">Site ID</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_no_cloud">Login (No Cloud)</string>
    <string name="action_cancel">Cancel</string>
    <string name="new_user_question">Create account</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="create_user">Create User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_sensors">Monitors</string>
    <string name="navigation_status">Status</string>
    <string name="navigation_push_notification">Push Notification</string>
    <string name="navigation_log_out">Logout</string>
    <string name="navigation_log_in">Login</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_background">Change Background</string>
    <string name="navigation_upload_to_cloud">Upload</string>
    <string name="support_option">Contact</string>
    <string name="sms_option">SMS</string>
    <string name="upload">Upload</string>
    <string name="upload_action">Uploading</string>
    <string name="action_scan">Scan for Devices</string>
    <string name="action_send_notification">Send Notification</string>
    <string name="action_upload">Upload</string>
    <string name="notification_upload_warn">you must be  login to upload</string>
    <string name="change_ignore_activate">New Device Name:</string>
    <string name="forgot_password_explanation">Enter your email and press \'Reset Password\'. You should get instructions to recover your password on your email.</string>
    <string name="prompt_confirm_email">Confirm Email</string>
    <string name="email_confirmation_must_match">Email confirmation must match. </string>
    <string name="password_confirmation_must_match">Password confirmation must match. </string>
    <string name="customer_id">Customer ID: %1$s</string>
    <string name="validation_email_required">Email is required.</string>
    <string name="validation_password_required">Password is required.</string>
    <string name="validation_site_required">Site ID is required.</string>
    <string name="validation_customer_required">Customer ID is required.</string>
    <string name="validation_password_char_length">Your password must be at least 8 characters long.</string>
    <string name="success_password_reset">Instructions on how to reset your password have been sent to your email.</string>
    <string name="error_password_reset">It was not possible to reset your password. Please try again later.</string>
    <string name="generating_user_id">Getting Customer Id</string>
    <string name="creating_user">Creating Account</string>
    <string name="resetting_password">Resetting Password</string>
    <string name="default_request_error_message">There was an error. Please try again later.</string>
    <string name="message_account_creation_success">Account Created. Please confirm the account on your email before attempting to login.</string>
    <string name="signing_in">Signing In...</string>
    <string name="add_sensor_title">New Monitor Device</string>
    <string name="add_sensor_description">Enter A Description (e.g Bed Room) \u0026 tap Use It. If the device is not yours tap Not Mine to ignore.</string>
    <string name="add_sensor_instructions"><![CDATA[Enter a description (e.g. Jacket Activator) & tap \"Register\".]]></string>
    <string name="sensor_found_name">Found: Sensor LM01</string>
    <string name="sensor_found_label">Found:</string>
    <string name="sensor_serial_label">S/N:</string>
    <string name="sensor_address">Address:</string>
    <string name="sensor_found_name_hint">Write a name for this device</string>
    <string name="sensor_found_description_hint">Write a description for this device</string>
    <string name="use_it">Register</string>
    <string name="ignore">Ignore</string>
    <string name="active_sensors">Active Monitors</string>
    <string name="inactive_sensors">Ignored Monitors</string>
    <string name="action_remove_sensors">Remove Monitors</string>
    <string name="no_sensors_found">No Monitors Found</string>
    <string name="empty_sensor_add_instructions">To add Monitors, press \"Scan for Devices\" in the top bar.</string>
    <string name="sensors">Sensors</string>
    <string name="action_generate_random_alert">Generate Random Alert</string>
    <string name="alarm_notification_text">Alert generated for %1$s</string>
    <string name="add">Add</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="scanning">Looking for devices...</string>
    <string name="title_scan_devices">Scan Devices</string>
    <string name="ble_not_supported">This device does not support Low Energy Bluetooth</string>
    <string name="scan_zero_found">No devices were found.</string>
    <string name="scan_one_found">A device was found. Register it to receive alarms from it.</string>
    <string name="scan_many_found">%1$s devices were found. Register them to receive alerts.</string>
    <string name="scan_again">Scan Again</string>
    <string name="cancel">Cancel</string>
    <string name="add_sensor_cancel">Not Mine</string>
    <string name="add_sensor_ok">Use It</string>
    <string name="device_already_added">Already Added</string>
    <string name="connect">Connect</string>
    <string name="action_restart_service">Restart Service</string>
    <string name="prompt_customer_id">Customer ID</string>
    <string name="validation_user_exists">User Email already in use.</string>
    <string name="user_created_successfully">The user was created successfully.</string>
    <string name="validation_incorrect_user_password">Invalid User or Password.</string>
    <string name="push_notification_message_alert_on">The sensor %1$s has been activated.</string>
    <string name="push_notification_message_alert_off">The sensor %1$s has been deactivated.</string>
    <string name="push_notification_message_alert">%1$s sensor has changed to %2$s.</string>
    <string name="view_history">History</string>
    <string name="view_delete">Delete</string>
    <string name="title_activity_history_sensor">Alert History</string>
    <string name="list_Alarm_Description">Description </string>
    <string name="list_Alarm_header2">Alerted On:</string>
    <string name="list_Alarm_header3">Dismissed On:</string>
    <string name="list_Alarm_header4">Time Ellapsed</string>
    <string name="elapsed_time">Time to dismiss: %1$s</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="upload_fail">Error to Sync with the server</string>
    <string name="upload_server_error">Error uploading data to server.</string>
    <string name="upload_login_error">You need to be online to upload</string>
    <string name="loginError">Error to login in server, please try again.</string>
    <string name="empty_sensor_upload">Current Devices do not have Alerts to Upload</string>
    <string name="no_sensors_found_upload">No Devices to Upload</string>
    <string name="device_serial">Serial #: %1$s</string>
    <string name="device_version">Version: %1$s / %2$s</string>
    <string name="device_battery">Battery:</string>
    <string name="device_signal">Signal:</string>
    <string name="device_temperature">Temperature: %1$s °F / %2$s °C</string>
    <string name="empty_history_layout">There are no alerts to show‏</string>
    <string name="empty_alarm_history">No Alerts Found</string>
    <string name="empty_sensor_fragment">There are no Sensors to show‏</string>
    <string name="empty_sms_fragment">There are no Contatcs to show‏</string>
    <string name="empty_sensor">No Sensors Found</string>
    <string name="empty_sms">No Contacts Found</string>
    <string name="owner_text">CareSentinel</string>
    <string name="owner_text2">A Loon Medical, Inc. suite product</string>
    <string name="owner_subtext">Tolland, CT</string>
    <string name="phone_text">‎1-855-282-0004‎</string>
    <string name="phone_subtext">Phone</string>
    <string name="website_devices_text">http://www.shopcaresentinel.com/product-category/build-your-own-sensor-system/</string>
    <string name="website_devices_subtext">For replacement sensors and other medical devices</string>
    <string name="website_text">http://www.shopcaresentinel.com/resources/</string>
    <string name="website_subtext">More info</string>
    <string name="email_text">Info@shopcaresentinel.com</string>
    <string name="email_subtext">Email</string>
    <string name="support_spinner">Connecting...</string>
    <string name="delete">Delete</string>
    <string name="property_bed">Bed</string>
    <string name="property_bed_on">Bed Occupied</string>
    <string name="property_bed_off">Bed Empty</string>
    <string name="property_chair">Chair</string>
    <string name="property_chair_on">Chair Occupied</string>
    <string name="property_chair_off">Chair Empty</string>
    <string name="property_toilet">Toilet</string>
    <string name="property_toilet_on">Toilet Occupied</string>
    <string name="property_toilet_off">Toilet Empty</string>
    <string name="property_incontinence">Incontinence</string>
    <string name="property_incontinence_on">Incontinence Sensor Alert</string>
    <string name="property_incontinence_off"></string>
    <string name="property_call">Call</string>
    <string name="property_call_on"></string>
    <string name="property_call_off">Call Button Service Requested</string>
    <string name="property_pri">Portal</string>
    <string name="property_pri_on">Doorway Motion Detected</string>
    <string name="property_pri_off"></string>
    <string name="property_fall_button">Fall Button</string>
    <string name="property_fall_button_on"></string>
    <string name="property_fall_button_off">Fall Button Alert</string>
    <string name="device_deleted">Device Deleted</string>
    <string name="undo">Undo</string>
    <string name="device_removed">Device succesfully removed</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_delete_swipe">Delete Device</string>
    <string name="contact_deleted">The contact was deleted successful</string>
    <string name="title_delete_activate_swipe">Activate or Delete Device</string>
    <string name="button_activate_device">Activate</string>
    <string name="button_delete_device">Delete</string>
    <string name="button_add_device_swipe">Add to devices</string>
    <string name="message_delete_swipe">Do you really want to delete this device?</string>
    <string name="rename_device">Rename</string>
    <string name="message_dialogbox_rename">Enter the new name:</string>
    <string name="tittle_dialogbox_rename">Rename</string>
    <string name="not_connected">Not Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="log">Logs</string>
    <string name="send_email">Send Email</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="message_device_name_obligatory">You need to put a description for this device</string>
    <string name="monitor_info">Monitor Information</string>
    <string name="Logout_message">Logout has been successful </string>
</resources>