<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_restart_service"
        android:title="@string/action_restart_service"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:visible="false"/>

    <item android:id="@+id/action_remove_sensors"
        android:title="@string/action_remove_sensors"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:visible="false"/>

    <item android:id="@+id/action_generate_random_alert"
        android:title="@string/action_generate_random_alert"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:visible="false"/>

</menu>