<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_blue"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="@color/light_gray"
        android:layout_gravity="center_vertical"
        >

        <TextView
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:textColor="@color/text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_username"
                style="@style/LoginIcon"/>

            <EditText
                style="@style/LoginEditText"
                android:id="@+id/emailET"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_username"
                style="@style/LoginIcon"/>

            <EditText
                style="@style/LoginEditText"
                android:id="@+id/confirmEmailET"
                android:hint="@string/prompt_confirm_email"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_password"
                style="@style/LoginIcon"/>

            <EditText
                style="@style/LoginEditText"
                android:id="@+id/passwordET"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_password"
                style="@style/LoginIcon"/>

            <EditText
                style="@style/LoginEditText"
                android:id="@+id/confirmPasswordET"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <Button
            android:layout_marginTop="10dp"
            style="@style/Button.light_blue"
            android:id="@+id/createUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_user"
        />

    </LinearLayout>



</LinearLayout>



