<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:id="@+id/cardLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <View
                android:id="@+id/statusV"
                android:background="@drawable/circle_green"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp">
            </View>

            <TextView
                android:id="@+id/nameTV"
                android:layout_toRightOf="@+id/statusV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sensor Name"
                android:textSize="@dimen/font_big"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                />

            <ImageView
                android:id="@+id/batteryIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/battery4"
                android:tint="@color/green"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/signalIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/wifi3"
                android:tint="@color/green"
                android:layout_toLeftOf="@+id/batteryIV"
                android:layout_centerVertical="true"
                />
            <ProgressBar
                android:id="@+id/loadingPB"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/connectingTV"
                android:layout_gravity="center_vertical"
                android:text="@string/connecting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/loadingPB"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/light_gray"></View>

        <LinearLayout
            android:id="@+id/sensorsLL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_toilet"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_incontinence"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_chair"
                android:layout_margin="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/sensorsLL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_bed"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_call"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_pri"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/alertTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_big"
            android:textStyle="bold|italic"
            android:padding="10dp"
            android:textColor="@color/dark_orange"
            android:layout_gravity="right"
            android:text="X (2015-12-15) - Alert >>"
         />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/light_gray"></View>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="right"
            android:text="@string/button_activate_device"
            android:elevation="0dp"
            android:textColor="@color/colorAccent"
            android:background="@color/transparent"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/connectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="right"
            android:text="@string/connect"
            android:elevation="0dp"
            android:textColor="@color/colorAccent"
            android:background="@color/transparent"
         />
    </LinearLayout>

</android.support.v7.widget.CardView>




